Update lists at 20241018-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1388,7 +1388,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2220:8710::1;
@@ -1453,6 +1452,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
@@ -1733,6 +1733,7 @@ allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
+allow 31.42.185.135;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 3.71.175.220;
@@ -1753,6 +1754,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1855,7 +1857,6 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.183;
 allow 5.255.118.244;
 allow 5.255.120.205;
 allow 5.255.121.71;
@@ -1934,6 +1935,7 @@ allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.139.190;
 allow 82.85.247.254;
+allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1942,6 +1944,7 @@ allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 86.205.5.107;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
@@ -1990,7 +1993,6 @@ allow 92.246.84.133;
 allow 93.113.25.221;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
@@ -2007,7 +2009,6 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
