--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -431,7 +431,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2220:8710::1;
@@ -496,6 +495,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
