--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -199,13 +199,8 @@ set_real_ip_from 2605:6400:30:f10c:326a:ca74:1896:b82a;
 set_real_ip_from 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
 set_real_ip_from 2605:6400:30:f10c:6327:774b:289a:2916;
 set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
-set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
@@ -770,4 +765,5 @@ set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
 set_real_ip_from 2a12:dd47:8513::5;
+set_real_ip_from 2a12:dd47:8513::6;
 set_real_ip_from 2a13:d207:0:461::1;
