Update lists at 20241019-1200

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -207,7 +207,9 @@ allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -488,7 +490,6 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -770,4 +771,5 @@ allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
 allow 2a12:dd47:8513::5;
 allow 2a12:dd47:8513::6;
+allow 2a12:dd47:8513::7;
 allow 2a13:d207:0:461::1;
