--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -165,6 +165,7 @@ allow 154.213.184.111;
 allow 154.213.184.17;
 allow 154.213.184.42;
 allow 154.213.184.5;
+allow 154.213.184.7;
 allow 154.213.184.79;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -1168,7 +1169,9 @@ allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1450,7 +1453,6 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1732,6 +1734,7 @@ allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
 allow 2a12:dd47:8513::5;
 allow 2a12:dd47:8513::6;
+allow 2a12:dd47:8513::7;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1757,7 +1760,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1939,7 +1942,6 @@ allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
