Update lists at 20241019-1800

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.196.37.111;
+set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.229.54.107;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.28.52.93;
@@ -149,7 +150,6 @@ set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.70.164.211;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
-set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -308,6 +308,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -952,6 +953,7 @@ set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
+set_real_ip_from 205.185.114.243;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
@@ -967,6 +969,7 @@ set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
+set_real_ip_from 209.141.53.11;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
@@ -1394,7 +1397,6 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2220:8710::1;
@@ -1466,6 +1468,7 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
+set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
@@ -1761,8 +1764,8 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.248;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1822,6 +1825,7 @@ set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.9.148.113;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
+set_real_ip_from 45.95.169.152;
 set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
 set_real_ip_from 45.95.169.225;
@@ -2000,7 +2004,6 @@ set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.221;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.8.245.134;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
@@ -2017,6 +2020,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.54;
