--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
+allow 103.208.86.5;
 allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.28.52.93;
@@ -149,7 +150,6 @@ allow 146.59.126.232;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -308,6 +308,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.172.34;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -952,6 +953,7 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
+allow 205.185.114.243;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -967,6 +969,7 @@ allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.51.180;
 allow 209.141.51.30;
+allow 209.141.53.11;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
@@ -1394,7 +1397,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2220:8710::1;
@@ -1466,6 +1468,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1761,8 +1764,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.248;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1822,6 +1825,7 @@ allow 45.84.107.76;
 allow 45.9.148.113;
 allow 45.94.31.68;
 allow 45.95.169.130;
+allow 45.95.169.152;
 allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
@@ -2000,7 +2004,6 @@ allow 92.246.84.133;
 allow 93.113.25.221;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
@@ -2017,6 +2020,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.115.121;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
