Update lists at 20241019-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,7 @@ allow 146.59.126.232;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -308,7 +309,6 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.172.34;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -635,6 +635,7 @@ allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
+allow 192.9.249.147;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
@@ -1113,6 +1114,7 @@ allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
+allow 2603:c024:c001:207e:2b71:7031:c7c7:abec;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -1376,7 +1378,6 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1397,6 +1398,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2220:8710::1;
@@ -1764,8 +1766,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
-allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1823,6 +1823,7 @@ allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.152;
@@ -1859,7 +1860,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1961,7 +1961,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.99.249.117;
 allow 89.147.108.90;
@@ -2004,6 +2003,7 @@ allow 92.246.84.133;
 allow 93.113.25.221;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
