--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -4,7 +4,6 @@ allow 102.130.127.117;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
-allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.229.54.107;
@@ -137,7 +136,6 @@ allow 138.59.18.110;
 allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.239.146.142;
 allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
@@ -175,7 +173,6 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 155.138.161.171;
-allow 157.254.252.117;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -528,7 +525,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -576,7 +572,6 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.15.92.181;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -733,7 +728,6 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
-allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -1083,7 +1077,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
-allow 2407:3640:2207:8882::1;
 allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1459,6 +1452,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1670,7 +1664,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
@@ -1766,6 +1759,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1867,7 +1861,6 @@ allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
-allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1948,11 +1941,11 @@ allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
