--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -771,4 +771,5 @@ deny 2a12:dd47:8513::5;
 deny 2a12:dd47:8513::6;
 deny 2a12:dd47:8513::7;
 deny 2a12:dd47:8513::8;
+deny 2a12:dd47:8513::9;
 deny 2a13:d207:0:461::1;
