--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -771,4 +771,5 @@ set_real_ip_from 2a12:dd47:8513::5;
 set_real_ip_from 2a12:dd47:8513::6;
 set_real_ip_from 2a12:dd47:8513::7;
 set_real_ip_from 2a12:dd47:8513::8;
+set_real_ip_from 2a12:dd47:8513::9;
 set_real_ip_from 2a13:d207:0:461::1;
