--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -429,6 +429,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2220:8710::1;
@@ -726,6 +727,7 @@ allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -772,4 +774,5 @@ allow 2a12:dd47:8513::6;
 allow 2a12:dd47:8513::7;
 allow 2a12:dd47:8513::8;
 allow 2a12:dd47:8513::9;
+allow 2a12:dd47:8513::a;
 allow 2a13:d207:0:461::1;
