--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -167,6 +167,7 @@ set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.184.7;
 set_real_ip_from 154.213.184.79;
+set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -222,6 +223,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.120.75.187;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
@@ -529,6 +531,7 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
+set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -720,6 +723,7 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.7.140.230;
+set_real_ip_from 200.122.181.2;
 set_real_ip_from 201.23.12.101;
 set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
@@ -984,6 +988,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
@@ -1195,6 +1200,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.208.240.78;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -1228,6 +1234,7 @@ set_real_ip_from 92.42.102.69;
 set_real_ip_from 93.113.25.221;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.8.245.134;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
