Update lists at 20241022-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -265,10 +265,12 @@ deny 185.100.85.132;
 deny 185.100.85.22;
 deny 185.100.85.23;
 deny 185.100.85.24;
+deny 185.100.85.25;
 deny 185.100.87.136;
 deny 185.100.87.139;
 deny 185.100.87.166;
 deny 185.100.87.174;
+deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.253;
 deny 185.100.87.41;
@@ -307,6 +309,7 @@ deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.156.172.34;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
@@ -344,6 +347,7 @@ deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
 deny 185.220.100.255;
+deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
@@ -437,6 +441,7 @@ deny 185.220.101.28;
 deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
+deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -1385,7 +1390,6 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:842b:821a:1801::abcd;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2220:8710::1;
@@ -1458,7 +1462,9 @@ deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
+deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
+deny 2a06:1700:0:12::4;
 deny 2a06:1700:0:15::1;
 deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
@@ -1493,6 +1499,7 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -1605,6 +1612,7 @@ deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -1679,6 +1687,7 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:89c::1;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1961,6 +1970,7 @@ deny 89.147.111.124;
 deny 89.185.85.140;
 deny 89.187.143.31;
 deny 89.208.240.78;
+deny 89.213.174.212;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.37.95.34;
@@ -1994,7 +2004,6 @@ deny 92.42.102.69;
 deny 93.113.25.221;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.8.245.134;
 deny 93.95.228.125;
 deny 93.95.228.205;
 deny 93.95.230.165;
