--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -265,10 +265,12 @@ set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
 set_real_ip_from 185.100.85.24;
+set_real_ip_from 185.100.85.25;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
+set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
@@ -307,6 +309,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -344,6 +347,7 @@ set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
 set_real_ip_from 185.220.100.255;
+set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
@@ -437,6 +441,7 @@ set_real_ip_from 185.220.101.28;
 set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
 set_real_ip_from 185.220.101.30;
+set_real_ip_from 185.220.101.31;
 set_real_ip_from 185.220.101.32;
 set_real_ip_from 185.220.101.33;
 set_real_ip_from 185.220.101.34;
@@ -1385,7 +1390,6 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2220:8710::1;
@@ -1458,7 +1462,9 @@ set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
+set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
+set_real_ip_from 2a06:1700:0:12::4;
 set_real_ip_from 2a06:1700:0:15::1;
 set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
@@ -1493,6 +1499,7 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -1605,6 +1612,7 @@ set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2:3::64;
 set_real_ip_from 2a0b:f4c2:3::65;
 set_real_ip_from 2a0b:f4c2:3::66;
@@ -1679,6 +1687,7 @@ set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:89c::1;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1961,6 +1970,7 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.208.240.78;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -1994,7 +2004,6 @@ set_real_ip_from 92.42.102.69;
 set_real_ip_from 93.113.25.221;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.8.245.134;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
