--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -427,7 +427,6 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2220:8710::1;
@@ -500,7 +499,9 @@ set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
+set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
+set_real_ip_from 2a06:1700:0:12::4;
 set_real_ip_from 2a06:1700:0:15::1;
 set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
@@ -535,6 +536,7 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -647,6 +649,7 @@ set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2:3::64;
 set_real_ip_from 2a0b:f4c2:3::65;
 set_real_ip_from 2a0b:f4c2:3::66;
@@ -721,6 +724,7 @@ set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:89c::1;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
