--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -231,6 +231,7 @@ deny 176.97.114.182;
 deny 176.97.114.202;
 deny 178.162.201.169;
 deny 178.17.170.144;
+deny 178.17.170.223;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -727,7 +728,6 @@ deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:221:701:102:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
 deny 2001:1b60:3:239:1003:106:0:1;
-deny 200.122.181.2;
 deny 2001:40e8:0:f090::100;
 deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
@@ -1065,6 +1065,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.173.216.67;
 deny 23.184.48.13;
 deny 23.94.211.25;
@@ -1093,6 +1094,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1377,6 +1379,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:83::a43b;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:da00:f23d:8f00::1;
@@ -1390,6 +1393,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:842b:821a:1801::abcd;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2220:8710::1;
@@ -1441,6 +1445,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1472,6 +1477,7 @@ deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
+deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:11:7::2;
@@ -1759,6 +1765,8 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
+deny 45.129.84.248;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.205.138;
@@ -1871,6 +1879,7 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
@@ -2004,6 +2013,7 @@ deny 92.42.102.69;
 deny 93.113.25.221;
 deny 93.123.12.112;
 deny 93.185.165.211;
+deny 93.8.245.134;
 deny 93.95.228.125;
 deny 93.95.228.205;
 deny 93.95.230.165;
