Update lists at 20241023-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -114,7 +114,6 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:8901::f03c:93ff:fe68:23b3;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe5d:2041;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -729,7 +728,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -763,6 +761,7 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
+allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:141:215:116;
@@ -779,4 +778,5 @@ allow 2a12:dd47:8513::9;
 allow 2a12:dd47:8513::a;
 allow 2a12:dd47:8513::b;
 allow 2a12:dd47:8513::c;
+allow 2a12:dd47:8513::d;
 allow 2a13:d207:0:461::1;
