--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -159,6 +159,7 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.100;
 allow 154.213.184.105;
 allow 154.213.184.111;
 allow 154.213.184.17;
@@ -209,7 +210,6 @@ allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.164.133;
 allow 172.104.176.218;
-allow 172.104.182.84;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.234.228.174;
@@ -1069,7 +1069,6 @@ allow 23.173.216.67;
 allow 23.184.48.13;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe5d:2041;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1692,7 +1691,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1726,6 +1724,7 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:a800:1:1:194:26:192:161;
+allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:141:215:116;
@@ -1742,6 +1741,7 @@ allow 2a12:dd47:8513::9;
 allow 2a12:dd47:8513::a;
 allow 2a12:dd47:8513::b;
 allow 2a12:dd47:8513::c;
+allow 2a12:dd47:8513::d;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1860,6 +1860,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -2027,7 +2028,6 @@ allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.91;
-allow 94.177.106.247;
 allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.228.169.70;
