--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -143,6 +143,7 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -202,7 +203,6 @@ deny 2605:6400:30:f174:1111:2222:3333:4444;
 deny 2605:6400:30:f174:1:2:3:4;
 deny 2605:6400:30:f174::42;
 deny 2605:6400:30:f174:42:42::;
-deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
 deny 2605:6400:30:f174:cafe::;
@@ -727,6 +727,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
