--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -184,6 +184,7 @@ set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -309,6 +310,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -528,6 +530,7 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
+set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -1102,6 +1105,7 @@ set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1161,7 +1165,6 @@ set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
@@ -1687,6 +1690,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1764,7 +1768,8 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
+set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1973,6 +1978,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
