Update lists at 20241024-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -786,4 +786,5 @@ allow 2a12:dd47:8513::b;
 allow 2a12:dd47:8513::c;
 allow 2a12:dd47:8513::d;
 allow 2a12:dd47:8513::e;
+allow 2a12:dd47:8513::f;
 allow 2a13:d207:0:461::1;
