--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -786,4 +786,5 @@ deny 2a12:dd47:8513::b;
 deny 2a12:dd47:8513::c;
 deny 2a12:dd47:8513::d;
 deny 2a12:dd47:8513::e;
+deny 2a12:dd47:8513::f;
 deny 2a13:d207:0:461::1;
