--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -132,7 +132,6 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
-set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
@@ -171,6 +170,7 @@ set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.184.63;
 set_real_ip_from 154.213.184.7;
+set_real_ip_from 154.213.184.74;
 set_real_ip_from 154.213.184.79;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
@@ -312,7 +312,6 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -1752,6 +1751,7 @@ set_real_ip_from 2a12:dd47:8513::b;
 set_real_ip_from 2a12:dd47:8513::c;
 set_real_ip_from 2a12:dd47:8513::d;
 set_real_ip_from 2a12:dd47:8513::e;
+set_real_ip_from 2a12:dd47:8513::f;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1776,7 +1776,8 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
