--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -786,4 +786,5 @@ set_real_ip_from 2a12:dd47:8513::b;
 set_real_ip_from 2a12:dd47:8513::c;
 set_real_ip_from 2a12:dd47:8513::d;
 set_real_ip_from 2a12:dd47:8513::e;
+set_real_ip_from 2a12:dd47:8513::f;
 set_real_ip_from 2a13:d207:0:461::1;
